--- a/app/views/partials/eventwidget.html
+++ b/app/views/partials/eventwidget.html
@@ -5,11 +5,8 @@
         </div>
         <div class="col-lg-8">
             <div class="media-body">
-        <h4 class="media-heading">Media heading</h4>
-        This is some sample text. This is some sample text.
-        This is some sample text. This is some sample text.
-        This is some sample text. This is some sample text.
-        This is some sample text. This is some sample text.
+        <h4 class="media-heading">{{formData.event_name[$index]}}</h4>
+        {{formData.event_overview[$index]}}
     </div>
     </div>
     </div>
