--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -197,12 +197,14 @@ input[type="radio"] {
     width: 100%;
     height: 100%;
     /*height: 200px;*/
-    background-color: #64A3A3;
-    border: solid black 1px;
-    -webkit-box-shadow: 3px 2px 5px 0px rgba(10,38,38,0.75);
-    -moz-box-shadow: 3px 2px 5px 0px rgba(10,38,38,0.75);
-    box-shadow: 3px 2px 5px 0px rgba(10,38,38,0.75);
-    border-radius: 5px;
+    background-color: rgba(163, 137, 137, 0.09);
+    -webkit-box-shadow: 0px 0px 2px;
+    -moz-box-shadow: 0px 0px 2px;
+    box-shadow: 0px 0px 2px;
+
+
+
+
 }
 
 .eventTitle {
