--- a/app/views/partials/adminSidebar.html
+++ b/app/views/partials/adminSidebar.html
@@ -27,33 +27,16 @@
 <div id="wrapper">
 <!-- Sidebar -->
 <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a href="#">
-                Sidebar Options
-            </a>
+    <ul class="sidebar-nav" style="padding-top:10px;">
+
+        <li>
+
+           <a ui-sref="admin.add"><i style="padding-right: 20px;" class="glyphicon glyphicon-plus"></i> Add New Event</a>
         </li>
         <li>
-            <a ui-sref="admin.add">Add New Event</a>
+            <a ui-sref="admin.view"><i style="padding-right: 20px;" class="glyphicon glyphicon-eye-open"></i> View All Events</a>
         </li>
-        <li>
-            <a ui-sref="admin.view">View All Events</a>
-        </li>
-        <li>
-            <a href="#">Overview</a>
-        </li>
-        <li>
-            <a href="#">Events</a>
-        </li>
-        <li>
-            <a href="#">About</a>
-        </li>
-        <li>
-            <a href="#">Services</a>
-        </li>
-        <li>
-            <a href="#">Contact</a>
-        </li>
+
     </ul>
 </div>
 <!-- /#sidebar-wrapper -->
