--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -9,20 +9,29 @@
     <div class="col-lg-10">
         <div id="page-content-wrapper">
             <div class="container-fluid" ng-controller="adminController">
-                <form class="form-horizontal" role="form" name="AddShareForm" novalidate ng-submit="testa(testObj)">
-                    <angucomplete id="members"
-                                  placeholder="Search members"
-                                  pause="100"
-                                  selectedobject="AddShareForm.testObj"
-                                  url="http://localhost/shout/server/userController.php?func=getSearchResults&city=Mumbai&q="
-                                  datafield=""
-                                  searchfields="testObj"
-                                  titlefield="area_name"
-                                  descriptionfield="type"
-                                  inputclass="form-control form-control-small"
-                            />
-                    <!--<input type="hidden" ng-model="testObj">-->
+
+                <form class="form-horizontal" role="form" name="AddShareForm" novalidate ng-controller="adminController" ng-submit="AddShareForm.$valid && submit()">
+                    <div class="form-group">
+                        <div class="col-xs-10 col-xl-10">
+                            <angucomplete-alt id="members"
+                                              placeholder="Search members"
+                                              pause="400"
+                                              selected-object="testObj"
+                                              remote-url="http://localhost/shout/server/userController.php?func=getSearchResults&city=Mumbai&q="
+                                              remote-url-data-field=""
+                                              title-field="area_name"
+                                              description-field="type"
+                                              input-class="form-control form-control-small"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-offset-2 col-xs-10 col-xl-offset-2 col-xl-10">
+                            <button class="blue-button" type="submit" class="btn btn-default">Add</button>
+                        </div>
+                    </div>
                 </form>
+
 
 
             </div>
