--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -24,8 +24,8 @@ html,body {
     padding-left: 45%;
 }
 .mypageheader{
-    height: 70px;
-    background:#2B567D;
+    height: 80px;
+    background:rgba(28, 31, 33, 0.73);
 }
 
 .navbar-default .mybrand{
@@ -69,6 +69,7 @@ html,body {
 }
 
 #sidebar-wrapper {
+    margin-top: 30px;
     z-index: 1000;
     position: fixed;
     left: 250px;
@@ -76,7 +77,7 @@ html,body {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #274063;
+    background: #17181A;;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
