--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,6 +1,46 @@
 <!-- THis page is the admin template
     where admin sidebar and admin content will
     be loaded in 2 diff coloumns  -->
+<div class="row" ng-controller="loginController">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <nav class="navbar navbar-default navbar-fixed-top mypageheader">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand mybrand" href="#"> <i style="padding-right: 10px;" class="glyphicon glyphicon-home"></i>Rolling Scenes</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <script>
+                            var user = sessionStorage.getItem('user');
+                            document.getElementById('user').innerHTML = user;
+                        </script>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">organiser_id <span id="user"></span> <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a ng-click="logout()">logout</a></li>
+                                <li><a href="#menu-toggle" class="" id="menu-toggle">Show/Hide Menu</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+
+            </div><!-- /.container-fluid -->
+
+
+        </nav>
+    </div>
+</div>
+
+
 
 <div class="row">
     <div class="col-lg-2">
