--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -27,7 +27,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">organiser_id <span id="user"></span> <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a ng-click="logout()">logout</a></li>
-                                <li><a href="#menu-toggle" class="" id="menu-toggle">Show/Hide Menu</a></li>
+                                <!--<li><a href="#menu-toggle" class="" id="menu-toggle">Show/Hide Menu</a></li>-->
                             </ul>
                         </li>
                     </ul>
