removed all console.log

--- a/app/views/partials/eventwidget.html
+++ b/app/views/partials/eventwidget.html
@@ -1,4 +1,4 @@
-<div class="media viewEvents">
+<div class="media viewEvents" style=" margin-top: 24px;">
     <div class="row">
         <div class="col-lg-4" style="height: 210px;">
             <img class="media-object" height="100%" width="100%" ng-src="{{encoded_image_path_array[$index]}}" alt="Media Object"/>
