--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -209,7 +209,7 @@ input[type="radio"] {
 
 .preloader {
     padding: 50px;
-    background: url('../images/713.GIF') no-repeat 70% 70% transparent;
+    background: url('images/preloader.GIF') no-repeat 70% 70% transparent;
 }
 .map-canvas {
     width: 600px;
