removed all console.log

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -231,7 +231,7 @@ input[type="radio"] {
 
 }
 .viewEvents:hover{
-    background-color: #4E4E4E;
+    background-color: #928989;
     padding: 10px;
     margin-bottom: 20px;
     color: #ffffff;
